# real-time-physics

./: .clang-format  README.md  main.c  meson.build
include/: main.h  math.h
src/: main.c  math.c
subprojects/glad/: meson.build
subprojects/glad/include/glad/: gl.h
subprojects/glad/src/: gl.c
